--- a/neuraxreactnativeapp/package.json
+++ b/neuraxreactnativeapp/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.3",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.6.0",
     "base-64": "^1.0.0",
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-a11y-slider": "^1.3.2",
     "react-native-bluetooth-classic": "^1.60.0-rc.29",
     "react-native-crypto-js": "^1.0.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
