--- a/neuraxreactnativeapp/package.json
+++ b/neuraxreactnativeapp/package.json
@@ -22,6 +22,7 @@
     "react-native-a11y-slider": "^1.3.2",
     "react-native-bluetooth-classic": "^1.60.0-rc.29",
     "react-native-crypto-js": "^1.0.0",
+    "react-native-date-picker": "^4.3.3",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "styled-components": "^6.1.0"
   },
