--- a/neuraxreactnativeapp/package.json
+++ b/neuraxreactnativeapp/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-camera-roll/camera-roll": "^6.0.2",
     "@react-native-community/hooks": "^3.0.0",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
@@ -24,6 +25,7 @@
     "react-native-crypto-js": "^1.0.0",
     "react-native-date-picker": "^4.3.3",
     "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-vision-camera": "^3.6.4",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
